# state-machine-benchmark

./: CMakeLists.txt  README.md  conanfile.txt
.github/workflows/: benchmark.yml
benchmark/: CMakeLists.txt  complex_compilememory_history.csv  complex_runtime.pl  complex_runtime_history.csv  evaluate_compilememory.sh  evaluate_compiletime.sh  evaluate_runtime.sh  max_heap.py  simple_compilememory_history.csv  simple_runtime.pl  simple_runtime_history.csv
benchmark/complex/: CMakeLists.txt
benchmark/simple/: CMakeLists.txt
